--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,7 +73,7 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-    entryFile: "router.js"
+        entryFile: "router.js"
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -104,7 +104,7 @@ android {
         versionCode 1
         versionName "1.0"
         ndk {
-            abiFilters "armeabi-v7a", "x86"
+            abiFilters "armeabi-v7a"//, "x86"
         }
     }
     splits {
@@ -112,13 +112,32 @@ android {
             reset()
             enable enableSeparateBuildPerCPUArchitecture
             universalApk false  // If true, also generate a universal APK
-            include "armeabi-v7a", "x86"
+            include "armeabi-v7a"//, "x86"
+        }
+    }
+    signingConfigs {
+        release {
+            if (project.hasProperty('MYAPP_RELEASE_STORE_FILE')) {
+                storeFile file(MYAPP_RELEASE_STORE_FILE)
+                storePassword MYAPP_RELEASE_STORE_PASSWORD
+                keyAlias MYAPP_RELEASE_KEY_ALIAS
+                keyPassword MYAPP_RELEASE_KEY_PASSWORD
+            }
         }
     }
     buildTypes {
+        debug {
+            ndk {
+                abiFilters "armeabi-v7a", "x86"
+            }
+        }
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            signingConfig signingConfigs.release
+            ndk {
+                abiFilters "armeabi-v7a"//, "x86"
+            }
         }
     }
     // applicationVariants are e.g. debug, release
@@ -126,7 +145,7 @@ android {
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
             // http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
-            def versionCodes = ["armeabi-v7a":1, "x86":2]
+            def versionCodes = ["armeabi-v7a": 1, "x86": 2]
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
@@ -137,17 +156,21 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-webview')
+    compile project(':react-native-smartrefreshlayout')
     compile project(':react-native-vector-icons')
     compile project(':react-native-gesture-handler')
+
     // If your app supports Android versions before Ice Cream Sandwich (API level 14)
-    compile 'com.facebook.fresco:animated-base-support:1.10.0'
+//    compile 'com.facebook.fresco:animated-base-support:1.10.0'
+
     // For animated GIF support
-    compile 'com.facebook.fresco:animated-gif:1.10.0'
+    compile 'com.facebook.fresco:animated-gif:1.11.0'
+
     // For WebP support, including animated WebP
-    compile 'com.facebook.fresco:animated-webp:1.10.0'
-    compile 'com.facebook.fresco:webpsupport:1.10.0'
-    // For WebP support, without animations
-    compile 'com.facebook.fresco:webpsupport:1.10.0'
+    compile 'com.facebook.fresco:animated-webp:1.11.0'
+//    compile 'com.facebook.fresco:webpsupport:1.11.0'
+
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     implementation "com.facebook.react:react-native:+"  // From node_modules
