--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -73,7 +73,7 @@ import com.android.build.OutputFile
  */
 
 project.ext.react = [
-        entryFile: "router.js"
+        entryFile: "index.js"
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -102,7 +102,7 @@ android {
         minSdkVersion rootProject.ext.minSdkVersion
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.0"
         ndk {
             abiFilters "armeabi-v7a"//, "x86"
         }
@@ -157,7 +157,6 @@ android {
 
 dependencies {
     compile project(':react-native-webview')
-    compile project(':react-native-smartrefreshlayout')
     compile project(':react-native-vector-icons')
     compile project(':react-native-gesture-handler')
 
